[metadata]
name = integration_test_reporting
description = Reporting for LSST Control System Software Integration Testing
author = Michael Reuter
author_email = mareuter@lsst.org
license = BSD 3-Clause License
url = https://github.com/lsst-sitcom/integration_test_reporting
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = True
package_dir =
  =python
packages=find:

[options.packages.find]
where=python

[options.entry_points]
console_scripts =
  disabled_report.py = lsst.integration_test_reporting.bin.disabledreport:main
  enabled_report.py = lsst.integration_test_reporting.bin.enabledreport:main
  offline_report.py = lsst.integration_test_reporting.bin.offlinereport:main
  shutdown_report.py = lsst.integration_test_reporting.bin.shutdownreport:main
  standby_report.py = lsst.integration_test_reporting.bin.standbyreport:main

[flake8]
max-line-length = 110
max-doc-length = 79
ignore = E133, E226, E228, W504
exclude = __init__.py version.py

[tool:pytest]
addopts = --flake8
flake8-ignore = E133 E226 E228 W504
